plugins {
    id 'java'
}

group 'io.izzel.mod'
version '1.2-SNAPSHOT'

java.toolchain.languageVersion = JavaLanguageVersion.of(16)

repositories {
    mavenCentral()
    maven { url = 'https://files.minecraftforge.net/maven' }
    maven { url = 'https://repo.spongepowered.org/maven' }
}

configurations {
    embed
    emdebFile
    implementation.extendsFrom(embed, embedFile)
}

dependencies {
    embed 'org.spongepowered:mixin:0.8.3'
    implementation 'cpw.mods:modlauncher:9.0.7'
    implementation 'cpw.mods:grossjava9hacks:1.1.0'
    implementation group: 'net.sf.jopt-simple', name: 'jopt-simple', version: '5.0.4'
    implementation "cpw.mods:securejarhandler:0.9.46"
    implementation "cpw.mods:bootstraplauncher:0.1.15"
}

jar {
    from configurations.embed.collect()
}
